# STplot

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  TODO.txt  elf_uploader.py  main.c  pipeline_build.sh  requirements.txt
cmake/: gitlab-mingw-share.cmake  gitlab-mingw.cmake
cmake/modules/: FindDWARF.cmake  Findlibusb.cmake
elf_server/: flask_server.py  server.bat  server.sh
stplot-gui/: CMakeLists.txt  main.cpp  stplotwindow.cpp  stplotwindow.h  stplotwindow.ui  varmodel.cpp  varmodel.h
stplot-gui/PlotPluginsDir/: CMakeLists.txt
stplot-gui/PlotPluginsDir/pluginSimpleGraph/: CMakeLists.txt  simplegraph.cpp  simplegraph.h
stplot-gui/PlotPluginsDir/pluginSimpleTable/: CMakeLists.txt  simpletable.cpp  simpletable.h
stplot-gui/PluginsDir/: CMakeLists.txt
stplot-gui/PluginsDir/PlotPluginsDir/pluginSimpleGraph/: simplegraph.cpp  simplegraph.h  simplegraph.ui
stplot-gui/PluginsDir/PlotPluginsDir/pluginSimpleTable/: CMakeLists.txt  simpletable.cpp  simpletable.ui
stplot-gui/PluginsDir/VarLoaderPluginsDir/pluginElfReader/: CMakeLists.txt
stplot-gui/modules/: settingsabstract.h
stplot-gui/modules/ReadManager/: readloop.cpp  readloop.h  readmanager.cpp  readmanager.h
stplot-gui/modules/ReadWriteDevice/: shnet_socket_device.h  stlinkdevice.cpp  stlinkdevice.h  stmstudiofiledevice.cpp
stplot-gui/widgets/: fimesavereaddevice.cpp  fimesavereaddevice.h  plotsettingsviever.cpp  plotsettingsviever.h  readloop.cpp  readloop.h  readmanager.cpp  readmanager.h  shnet_socket_device.cpp  shnet_socket_device.h  stlinkdevice.cpp  stlinkdevice.h
stplot-gui/widgets/ChannelsList/: chanalecustomeditor.cpp  chanalecustomeditor.h  chanalecustomeditor.ui  chanaleitemdelegate.cpp  chanaleitemdelegate.h  chanalematheditor.cpp  chanalematheditor.h  chanalematheditor.ui  channelmodel.cpp  channelmodel.h  channels.cpp  channels.h  channels.ui  comboboxdelegate.cpp  comboboxdelegate.h  newchanaledialog.cpp  newchanaledialog.h  newchanaledialog.ui
stplot-gui/widgets/FileProgress/: fileprogress.cpp  fileprogress.h  fileprogresssharememory.cpp  fileprogresssharememory.h
stplot-gui/widgets/FileProgress/FileProgressDialog/: CMakeLists.txt  fileprogressdialog.cpp  fileprogressdialog.h  main.cpp
stplot-gui/widgets/Settings/: settingswindow.cpp  settingswindow.h  settingswindow.ui
stplot-gui/widgets/SettingsDialog/: settingsdialog.cpp  settingsdialog.h
stplot-gui/widgets/SettingsViewer/: settingsviewer.cpp  settingsviewer.h
stplot-gui/widgets/VarLoader/: varfilter.cpp  varfilter.h  varloader.cpp  varloader.h  varloader.ui  varmodel.cpp  varmodel.h
stplot-gui/widgets/ViewManager/: viewmanager.cpp  viewmanager.h  viewmanager.ui
stplot-gui/windows/: varloader.cpp  varloader.h  varloader.ui
